Enterprise Connect Page Development (#23)
* Adding Package.json and linter

* Updated Package.json

* Updated Package-lock.json

* Delete .eslintrc.json

* Create .jshintrc

* added jshintign file

* Updated styling path

* adding spec for unit test

* updated loadwebui path

* changed loadwebui path

* updated path for css

* Enabled Dashboard view from sidebar

* Capitalization changes

* Dynamic Header changes

* Service Containers

* Removed style tags

* Updated Default Header text

* Formatted Code

* Formatted code

* Formatted code

* Delete MenuList.js

* Delete SidebarMenu.js

* Formatted code

* Formatted code

* Formatted code

* Formatted code

* Updated modules

* Resolving glob-parent module issue

* Thread Connect onclick call

* Thread Connect Page

* Thread Connect Changes

* Thread Connect page's css changes

* adding graph

* Updated highchart libs

* Updating for CORS

* Creating Static folder

* Highchart static files

* Fetching Highchart static files

* updating ui path

* Updated loadwebui path

* Graph color

* Graph color changes

* Enterprise Connect page call

* Enterprise page

* Enterprise page onclick

--- a/webui-assets/index.html
+++ b/webui-assets/index.html
@@ -32,6 +32,13 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system.js"
     ></script>
 
+    <!-- HighChart Library -->
+    <!-- <script src="assets/static/js/highchart.js" defer></script>
+    <script src="assets/static/js/series-label.js" defer></script>
+    <script src="assets/static/js/exporting.js" defer></script>
+    <script src="assets/static/js/export-data.js" defer></script>
+    <script src="assets/static/js/accessibility.js" defer></script> -->
+
     <title>DC-Portal</title>
   </head>
   <body className="text-center" style="background-color: white">
@@ -73,5 +80,11 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <!-- HighChart Library -->
+    <script src="assets/static/js/highchart.js" defer></script>
+    <!-- <script src="assets/static/js/series-label.js" defer></script> -->
+    <script src="assets/static/js/exporting.js" defer></script>
+    <script src="assets/static/js/export-data.js" defer></script>
+    <script src="assets/static/js/accessibility.js" defer></script>
   </body>
 </html>
