Create a yaml file for Github Actions (#39)
* Adding Package.json and linter

* Updated Package.json

* Updated Package-lock.json

* Delete .eslintrc.json

* Create .jshintrc

* added jshintign file

* Updated styling path

* adding spec for unit test

* updated loadwebui path

* changed loadwebui path

* updated path for css

* Enabled Dashboard view from sidebar

* Capitalization changes

* Dynamic Header changes

* Service Containers

* Removed style tags

* Updated Default Header text

* Formatted Code

* Formatted code

* Formatted code

* Delete MenuList.js

* Delete SidebarMenu.js

* Formatted code

* Formatted code

* Formatted code

* Formatted code

* Updated modules

* Resolving glob-parent module issue

* Thread Connect onclick call

* Thread Connect Page

* Thread Connect Changes

* Thread Connect page's css changes

* adding graph

* Updated highchart libs

* Updating for CORS

* Creating Static folder

* Highchart static files

* Fetching Highchart static files

* updating ui path

* Updated loadwebui path

* Graph color

* Graph color changes

* Enterprise Connect page call

* Enterprise page

* Enterprise page onclick

* Service Logos

* Adding logos

* Dive Page Call

* Dive Page

* Formatted

* Proper formatted

* Proper formatted

* Minor correction

* DivePower PMX call

* DivePower Page

* DivePower PMX Call from Dive

* Update style.css

* Update Sidebar.js

* Update Dashboard.js

* Update Dive.js

* Update DivePower.js

* Update EnterpriseConnect.js

* Update ThreadConnect.js

* GE New logo

* Logo Column

* Footer css

* Footer changes

* Old footer disabled

* Footer File

* Font size

* Minor Changes to Footer

* Service worker cdn

* cache IMG

* SW Comp code

* SW register

* install sw

* Update loadWebUI.js

* Update service-worker-compatibility.js

* Update service-worker-compatibi

--- a/webui-assets/index.html
+++ b/webui-assets/index.html
@@ -31,6 +31,13 @@
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.31/system.js"
     ></script>
+    
+    <script src="assets/static/js/service-worker-compatibility.js" ></script>
+
+<!--     <script
+      type="text/javascript"
+      src="https://storage.googleapis.com/workbox-cdn/releases/6.1.5/workbox-sw.js"
+    ></script> -->
 
     <!-- HighChart Library -->
     <!-- <script src="assets/static/js/highchart.js" defer></script>
@@ -85,6 +92,6 @@
     <!-- <script src="assets/static/js/series-label.js" defer></script> -->
     <script src="assets/static/js/exporting.js" defer></script>
     <script src="assets/static/js/export-data.js" defer></script>
-    <script src="assets/static/js/accessibility.js" defer></script>
+    <script src="assets/static/js/accessibility.js" defer></script>    
   </body>
 </html>
