--- a/webui-assets/index.html
+++ b/webui-assets/index.html
@@ -42,13 +42,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- HighChart Library -->
-    <!-- <script src="assets/static/js/highchart.js" defer></script>
-    <script src="assets/static/js/series-label.js" defer></script>
-    <script src="assets/static/js/exporting.js" defer></script>
-    <script src="assets/static/js/export-data.js" defer></script>
-    <script src="assets/static/js/accessibility.js" defer></script> -->
-
     <title>DC-Portal</title>
   </head>
   <body className="text-center" style="background-color: white">
@@ -65,6 +58,8 @@
             "https://unpkg.com/react-dom@16/umd/react-dom.development.js",
           "react-router-dom":
             "https://unpkg.com/react-router-dom@5.0.0/umd/react-router-dom.min.js",
+          "react-bootstrap":
+            "https://unpkg.com/react-bootstrap@2.0.0-beta.4/dist/react-bootstrap.min.js",
         },
         babelOptions: {
           compact: true,
@@ -100,6 +95,9 @@
       href="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/choices.min.css"
     />
     <script src="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/choices.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.33/moment-timezone.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.12.1/polyfill.min.js"></script>
 
     <!-- HighChart Library -->
     <script src="assets/static/js/highchart.js" defer></script>
@@ -111,6 +109,6 @@
       src="assets/static/js/service-worker-compatibility.js"
       defer
     ></script>
-    <script src="assets/static/js/scrollController.js" defer></script>
+    <script src="assets/static/js/custom.js" defer></script>
   </body>
 </html>
