--- a/webui-assets/index.html
+++ b/webui-assets/index.html
@@ -53,13 +53,14 @@
         map: {
           babel:
             "https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js",
-          react: "https://unpkg.com/react@16/umd/react.development.js",
+          react: "https://unpkg.com/react@17/umd/react.development.js",
           "react-dom":
-            "https://unpkg.com/react-dom@16/umd/react-dom.development.js",
+            "https://unpkg.com/react-dom@17/umd/react-dom.development.js",
           "react-router-dom":
             "https://unpkg.com/react-router-dom@5.0.0/umd/react-router-dom.min.js",
           "react-bootstrap":
             "https://unpkg.com/react-bootstrap@2.0.0-beta.4/dist/react-bootstrap.min.js",
+          uuid: "https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js",
         },
         babelOptions: {
           compact: true,
