--- a/public/index.html
+++ b/public/index.html
@@ -23,25 +23,24 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    -->    
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      href="%PUBLIC_URL%/static/css/bootstrap_v4.3.1.css"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/choices.js/1.1.6/styles/css/choices.min.css"
+      href="%PUBLIC_URL%/static/css/choices_v1.1.6.css"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/choices.js/1.1.6/choices.min.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      crossorigin="anonymous"
+    <script defer src="%PUBLIC_URL%/static/js/choices_v1.1.6.js"></script>    
+    <script defer
+      src="%PUBLIC_URL%/static/js/jquery_v3.3.12.js"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    <script defer
+      src="%PUBLIC_URL%/static/js/popper_v1.14.7.js"
     ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    <script defer
+      src="%PUBLIC_URL%/static/js/bootstrap_v4.3.1.js"
     ></script>
     <title>DC-Portal</title>
   </head>
