Add config for build

--- a/public/index.html
+++ b/public/index.html
@@ -32,15 +32,15 @@
       rel="stylesheet"
       href="%PUBLIC_URL%/static/css/choices_v1.1.6.css"
     />
-    <script defer src="%PUBLIC_URL%/static/js/choices_v1.1.6.js"></script>    
-    <script defer
-      src="%PUBLIC_URL%/static/js/jquery_v3.3.12.js"
+    <script src="%PUBLIC_URL%/static/js/choices.min.js"></script>    
+    <script
+      src="%PUBLIC_URL%/static/js/jquery-3.3.1.min.js"
     ></script>
-    <script defer
-      src="%PUBLIC_URL%/static/js/popper_v1.14.7.js"
+    <script
+      src="%PUBLIC_URL%/static/js/popper.min.js"
     ></script>
-    <script defer
-      src="%PUBLIC_URL%/static/js/bootstrap_v4.3.1.js"
+    <script
+      src="%PUBLIC_URL%/static/js/bootstrap.min.js"
     ></script>
     <title>DC-Portal</title>
   </head>
