Add Cookie Consent

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,19 @@
       rel="stylesheet"
       href="%PUBLIC_URL%/static/css/choices_v1.1.6.css"
     />
+    <script
+      src="%PUBLIC_URL%/static/js/jquery-3.3.1.min.js"
+    ></script>
+    <script
+      src="%PUBLIC_URL%/static/js/popper.min.js"
+    ></script>
+    <script
+      src="%PUBLIC_URL%/static/js/bootstrap.min.js"
+    ></script>
+    <script src="%PUBLIC_URL%/static/js/choices.min.js"></script>
+    <script
+      src="%PUBLIC_URL%/static/js/custom.js"
+    ></script>
     <title>DC-Portal</title>
   </head>
   <body>
@@ -48,14 +61,4 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>    
-    <script
-      src="%PUBLIC_URL%/static/js/jquery-3.3.1.min.js"
-    ></script>
-    <script
-      src="%PUBLIC_URL%/static/js/popper.min.js"
-    ></script>
-    <script
-      src="%PUBLIC_URL%/static/js/bootstrap.min.js"
-    ></script>
-    <script src="%PUBLIC_URL%/static/js/choices.min.js"></script>
 </html>
