--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,6 @@
 <script src="%PUBLIC_URL%/static/js/popper.min.js"></script>
 <script src="%PUBLIC_URL%/static/js/bootstrap.min.js"></script>
 <script src="%PUBLIC_URL%/static/js/choices.min.js"></script>
+<script src="%PUBLIC_URL%/static/js/custom.js"></script>
 
 </html>
